zookeeper/k8s/zookeeper.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: analytics
  name: zk-svc
  labels:
    app: zk
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  - port: 2181
    name: zk-client
  clusterIP: None
  selector:
    app: zk
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: analytics
  name: zk
spec:
  serviceName: zk-svc
  replicas: 3
  template:
    metadata:
      labels:
        app: zk
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values: 
                    - zk
              topologyKey: "kubernetes.io/hostname"
      securityContext:
          runAsUser: 1000
          fsGroup: 1000
          runAsNonRoot: true
      containers:
      - name: "k8szk"
        imagePullPolicy: IfNotPresent
        image: "reg-dhc.app.corpintra.net/ccp_analytics/zookeeper:v2"
        #image: "zookeeper:v2"
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1" 
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "zkOk.sh 2181"
          timeoutSeconds: 5
          periodSeconds: 5
          initialDelaySeconds: 60
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "zkOk.sh 2181"
          timeoutSeconds: 5
          periodSeconds: 5
          initialDelaySeconds: 60
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        command:
        - sh
        - -c
        - zkGenConfig.sh && zkServer.sh start-foreground
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/zookeeper
      imagePullSecrets:
        - name: ccp-analytics-ccpanalytics-pull-secret
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: "300M"
